--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "yarn compile && hardhat run scripts/deploy.ts",
     "issue-token": "hardhat run scripts/issue-token.ts",
     "deploy:ganache": "yarn compile && npx hardhat run --network localhost scripts/deploy.ts",
+    "deploy:rinkeby": "yarn compile && npx hardhat run --network rinkeby scripts/deploy.ts",
     "console": "npx hardhat console",
     "console:ganache": "npx hardhat console --network localhost",
     "check": "npx hardhat check",
@@ -22,12 +23,13 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@chainlink/contracts": "^0.4.1",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-ganache": "^2.0.1",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "@openzeppelin/contracts": "^4.5.0",
+    "@openzeppelin/contracts": "^4.6.0",
     "@typechain/ethers-v5": "^7.2.0",
     "@typechain/hardhat": "^2.3.1",
     "@types/chai": "^4.3.0",
@@ -44,7 +46,7 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-promise": "^5.2.0",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.2",
+    "ethers": "^5.6.8",
     "hardhat": "^2.9.3",
     "hardhat-gas-reporter": "^1.0.8",
     "husky": "^4.3.0",
