--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@typechain/ethers-v5": "^7.2.0",
     "@typechain/hardhat": "^2.3.1",
     "@types/chai": "^4.3.0",
+    "@types/lodash": "^4.14.182",
     "@types/mocha": "^9.1.0",
     "@types/node": "^12.20.47",
     "@typescript-eslint/parser": "^4.33.0",
@@ -50,6 +51,7 @@
     "hardhat": "^2.9.3",
     "hardhat-gas-reporter": "^1.0.8",
     "husky": "^4.3.0",
+    "lodash": "^4.17.21",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "pretty-quick": "^3.1.0",
